--- a/paper/dcpo-macrointerest.bib
+++ b/paper/dcpo-macrointerest.bib
@@ -1,12 +1,50 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Frederick Solt at 2023-05-03 19:12:31 -0500 
+%% Created for Frederick Solt at 2023-05-10 18:13:52 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Stimson2015,
+	address = {{New York}},
+	annote = {LDR    01566cam  22003374i 4500
+001    18663142
+005    20160509171636.0
+008    150617s2015    nyua     b    001 0 eng  
+906    $a7$bcbc$corignew$d1$eecip$f20$gy-gencatlg
+925 0  $aacquire$b1 shelf copy$xSel/ddw, 2016-01-05$eclaim1  2016-01-05
+955    $brk14 2015-06-17$crk14 2015-06-17 to subj$dre23 2015-08-13 (telework) to Dewey$wxl03 2015-08-13$axn12 2016-01-12 1 copy rec'd., to CIP ver.$fre06 2016-1-19 to BCCD$tre13 2016-05-05 Copy 2 Barcode 00282656413 to Discard$tre13 2016-05-09 Copy 3 Barcode 00282657247 to Discard
+010    $a  2015023851
+020    $a9781107108172 (hardback : alk. paper)
+020    $a9781107518919 (paperback : alk. paper)
+040    $aDLC$beng$cDLC$erda$dDLC
+042    $apcc
+043    $an-us---
+050 00 $aJK1764$b.S845 2015
+082 00 $a324.0973$223
+100 1  $aStimson, James A.
+245 10 $aTides of consent :$bhow public opinion shapes American politics /$cJames A. Stimson, University of North Carolina, Chapel Hill.
+250    $aSecond edition.
+264  1 $aNew York, NY :$bCambridge University Press,$c[2015]
+300    $axxvi, 173 pages :$billustrations ;$c23 cm
+336    $atext$btxt$2rdacontent
+337    $aunmediated$bn$2rdamedia
+338    $avolume$bnc$2rdacarrier
+504    $aIncludes bibliographical references (pages 159-162) and index.
+651  0 $aUnited States$xPolitics and government$xPublic opinion.
+650  0 $aPublic opinion$xPolitical aspects$zUnited States.
+650  0 $aPolitical participation$zUnited States.
+},
+	author = {Stimson, James A},
+	date-added = {2023-05-10 18:13:44 -0500},
+	date-modified = {2023-05-10 18:13:44 -0500},
+	edition = {Second edition},
+	publisher = {{Cambridge University Press}},
+	title = {Tides of Consent: How Public Opinion Shapes American Politics},
+	year = {2015}}
 
 @article{Tai2022,
 	author = {Tai, Yuehong 'Cassandra' and Hu, Yue and Solt, Frederick},
